--- a/ProjektGrafika/CMakeLists.txt
+++ b/ProjektGrafika/CMakeLists.txt
@@ -17,3 +17,8 @@ add_executable(ProjektGrafika ${SOURCES})
 target_link_libraries(ProjektGrafika glfw)
 target_link_libraries(ProjektGrafika glad)
 
+add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_CURRENT_SOURCE_DIR}/res
+    $<TARGET_FILE_DIR:${PROJECT_NAME}>/res
+)
