--- a/ProjektGrafika/CMakeLists.txt
+++ b/ProjektGrafika/CMakeLists.txt
@@ -10,6 +10,8 @@ set(SOURCES
 	Source/Shader.cpp
 	Source/vendor/stb_image/stb_image.cpp
 	Source/Assert.h
+	Source/Camera.h
+	Source/Camera.cpp
 )
 
 
@@ -18,6 +20,7 @@ add_executable(ProjektGrafika ${SOURCES})
 
 target_link_libraries(ProjektGrafika glfw)
 target_link_libraries(ProjektGrafika glad)
+target_link_libraries(ProjektGrafika glm::glm)
 target_include_directories(ProjektGrafika PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Source/vendor/stb_image)
 
 target_compile_definitions("${CMAKE_PROJECT_NAME}" PUBLIC RESOURCE_PATH="${CMAKE_CURRENT_SOURCE_DIR}/res/shaders/")
